--- a/firebase/app/src/main/res/layout/activity_login.xml
+++ b/firebase/app/src/main/res/layout/activity_login.xml
@@ -118,7 +118,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:inputType="textEmailAddress"
-            android:text="alortegama@gmail.com"
+            android:text="Lestrades@gmail.com"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
