--- a/firebase/app/src/main/res/layout/activity_registro.xml
+++ b/firebase/app/src/main/res/layout/activity_registro.xml
@@ -135,7 +135,7 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/registro_tie_mail"
             android:layout_width="match_parent"
-            android:text="alortegama@gmail.com"
+            android:text="Lestrades@gmail.com"
             android:layout_height="match_parent"
             android:imeOptions="actionNext"
             android:inputType="textEmailAddress"
@@ -164,7 +164,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:imeOptions="actionNext"
-            android:text="Álvaro Ortega Marmol"
+            android:text="Lestrades"
             android:inputType="textCapWords"
             android:nextFocusDown="@id/registro_tie_mail" />
     </com.google.android.material.textfield.TextInputLayout>
